finish html content 1

--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="section-1">
-      <div class="header-nav">Header logo</div>
-      <ul class="links">
-        <li>link-one</li>
-        <li>link-two</li>
-        <li>link-three</li>
-      </ul>
-      <div class="content1">
-        <h1>This website is awesome</h1>
-        <p>
-          This website had some subtext that goes here under the main title.
-          it's a smalle font and the color is lower contrast
-        </p>
-        <button class="button button1">sign up</button>
+    <div id="content-1">
+      <div class="nav">
+        <div class="header-nav">Header logo</div>
+        <ul class="links">
+          <li><a href="">link-one</a></li>
+          <li><a href="">link-two</a></li>
+          <li><a href="">link-three</a></li>
+        </ul>
       </div>
-      <img src="" alt="" />
+      <div class="sub">
+        <div class="subcontent-1">
+          <h1>This website is awesome</h1>
+          <p>
+            This website had some subtext that goes here under the main title.
+            it's a smalle font and the color is lower contrast
+          </p>
+          <button class="button button1">sign up</button>
+        </div>
+        <img
+          src="/images/markus-spiske-cvBBO4PzWPg-unsplash (1) copy.jpg"
+          alt=""
+        />
+      </div>
     </div>
   </body>
 </html>
