--- a/index.html
+++ b/index.html
@@ -32,5 +32,25 @@
         />
       </div>
     </div>
+    <div id="content-2">
+      <div class="header2">Some random information</div>
+      <div id="cards">
+        <div class="card">
+          <div class="squasre"> <img src="" alt=""></div>
+          <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+      <div class="card">
+        <div class="square"> <img src="" alt=""></div>
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    <div class="card">
+        <div class="square"> <img src="" alt=""></div>
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    <div class="card">
+        <div class="square"> <img src="" alt=""></div>
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    </div>
   </body>
 </html>
