--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </p>
           <button class="button button1">sign up</button>
         </div>
-        <img
+        <img class="pic1"
           src="/images/markus-spiske-cvBBO4PzWPg-unsplash (1) copy.jpg"
           alt=""
         />
@@ -36,19 +36,19 @@
       <div class="header2">Some random information</div>
       <div id="cards">
         <div class="card">
-          <div class="squasre"> <img src="" alt=""></div>
+          <div class="square"> <img class="pic2" src="/images/joshua-sortino-LqKhnDzSF-8-unsplash.jpg" alt=""></div>
           <div class="text">this is some subtext under an illustration or image</div>
     </div>
       <div class="card">
-        <div class="square"> <img src="" alt=""></div>
+        <div class="square"> <img class="pic2" src="/images/joshua-sortino-LqKhnDzSF-8-unsplash.jpg" alt=""></div>
         <div class="text">this is some subtext under an illustration or image</div>
     </div>
     <div class="card">
-        <div class="square"> <img src="" alt=""></div>
+        <div class="square"> <img class="pic2" src="/images/joshua-sortino-LqKhnDzSF-8-unsplash.jpg" alt=""></div>
         <div class="text">this is some subtext under an illustration or image</div>
     </div>
     <div class="card">
-        <div class="square"> <img src="" alt=""></div>
+        <div class="square"> <img class="pic2" src="/images/joshua-sortino-LqKhnDzSF-8-unsplash.jpg" alt=""></div>
         <div class="text">this is some subtext under an illustration or image</div>
     </div>
     </div>
