--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
         <div class="text">this is some subtext under an illustration or image</div>
     </div>
     </div>
+    <div class="content-3">
+      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maube it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</div>
+      <div class="name">-Thor, God of Thunder</div>
+    </div>
   </body>
 </html>
